[package]
name = "ulp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ulp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
log = "0.4"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4","serde"] }
lazy_static = "1.4.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
chrono = {version = "0.4.19", features= ["serde"]}
regex = "1.0"
glob = "0.3.0"
# MFT Parser
mft = "0.5"
# EVTX Parser
evtx = "0.7"