[package]
edition = "2021"
name = "ulp"
version = "0.1.0"

[[bin]]
name = "ulp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
env_logger = "0.9.0"
glob = "0.3.0"
lazy_static = "1.4.0"
log = "0.4"
regex = "1.0"
reqwest = {version = "0.11.0", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
sha2 = "0.10"
tokio = {version = "1", features = ["full"]}
type_casting = {path = "type_casting"}
uuid = {version = "0.8", features = ["v4", "serde"]}
warp = "0.3"
# MFT Parser
mft = "0.5"
# EVTX Parser
evtx = "0.7"
