[package]
edition = "2021"
name = "type_casting"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
