[package]
name = "ulp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4.0"
futures = "0.3"
mongod = { version = "0.3", features = ["derive"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
chrono = {version = "0.4.19", features= ["serde"]}
regex = "1.0"
