[package]
name = "mft_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ulp = { path = "../ulp" }
mft = "0.5"
mongodb = { version = "2.0.2" } #, features = ["derive","blocking"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
chrono = {version = "0.4.19", features= ["serde"]}
